--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: baby_sitter_app
+name: babysitter_flutter
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0-182.1.beta <3.0.0"
+  sdk: ">=2.17.0-239.0.dev <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,56 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.6.1
-  google_fonts: ^2.3.1
-  otp_text_field: ^1.1.2
-  curved_navigation_bar: ^1.0.3
-  shared_preferences: ^2.0.13
-  google_sign_in: ^5.2.4
-  firebase_auth: ^3.3.11
-  firebase_core: ^1.13.1
-  flutter_facebook_auth: ^4.1.2
-  flutter_native_splash: ^2.1.2
-  flutter_signin_button: ^2.0.0
-  provider: ^6.0.2
-  flutter_secure_storage: ^5.0.2
-  cloud_firestore: ^3.1.10
-  firebase_database: ^9.0.8
-  email_validator: ^2.0.1
-
-
-flutter_native_splash:
-  color: "#ffffff"
-  image: assets/splash.png
-  color_dark: "#232527"
-  # background_image_dark: assets/intelliegg.png
-  image_dark: assets/splash.png
-
-
-  android: true
-  ios: true
-  web: true
-
-  android_gravity: fill
-
-
-
-  # splashscreen: ^1.3.5
-  # otp: ^3.0.2
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -97,12 +58,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+  # https://flutter.dev/assets-and-images/#resolution-aware
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
